# tech-europe-hack-25

./: .env.example  .gitignore  README.md  README_workflow.md  add_weaviate_embeddings.py  augment_dataset.py  breach_impact_api.py  breach_impact_workflow.py  breach_integration.py  evaluation_service.py  exploratory.ipynb  hack.md  models.py  package-lock.json  package.json  pdf_info.py  pyproject.toml  query_weaviate.py  spain_gdpr_fines.db  spain_gdpr_fines_gdpr.db  spain_gdpr_fines_with_labels.db  test.py  test_workflow.py
api/: evaluation.py
backend/: ReAct.py  api_service.py  app.py  breach_impact_api.py  breach_integration.py  case_gathering_agent.py  evaluation_service.py  main.py  models.py  react_agent_service.py  requirements.txt  test.py
backend/api/: __init_.py  endpoints.py  evaluation.py
data-enhancement/: add_extra_labels.py  add_weaviate_embeddings.py  augment_dataset.py  exploratory.ipynb  gdpr_fines.db  query_weaviate.py  spain-data-from-archive.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: index.css
frontend/src/components/dashboard/: AIBreachAnalyzer.tsx  BreachImpactPredictor.tsx  DashboardHeader.tsx  GDPRComplianceCard.tsx  OverviewCard.tsx  VoiceAgent.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useBreachPrediction.ts  useCaseGathering.ts
frontend/src/pages/: Index.tsx
supabase/: config.toml
supabase/functions/openai-proxy/: index.ts
tests/: test_case_gathering.py  test_case_gathering_simple.py  test_complete_classification.py  test_detailed_iteration.py  test_final_comprehensive.py  test_force_classification.py  test_iteration_limit.py  test_workflow.py
