[project]
name = "tech-europe-hack-25"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "openai (>=1.97.0,<2.0.0)",
    "load-dotenv (>=0.1.0,<0.2.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "pandarallel (>=1.6.5,<2.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "flask (>=3.1.1,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "requests (>=2.32.4,<3.0.0)",
    "weaviate-client (>=4.16.1,<5.0.0)",
    "openai-agents (>=0.2.2,<0.3.0)",
    "sse-starlette>=1.8.2",
    "langgraph (>=0.5.3,<0.6.0)",
    "langsmith (>=0.4.8,<0.5.0)",
    "langchain-openai (>=0.3.28,<0.4.0)",
    "langchain-core (>=0.3.69,<0.4.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

